# AnswerYourQuestions

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: constants.py  main.py
app/api/: auth.py  business.py  file_upload.py
app/api/routes/: auth.py  business.py
app/core/: config.py  dependencies.py  startup_shutdown.py
app/db/: indexes.py  mongo.py
app/kafka/: consumers.py  producers.py  schemas.py  topics.py
app/models/: schemas.py
app/services/: auth.py  business_service.py  file_upload_service.py  kafka_producer_service.py
