[project]
name = "answeryourquestions"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "motor>=3.7.0",
    "openai>=1.78.0",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.4",
    "pymongo>=4.12.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.2",
]
