[project]
name = "answeryourquestions"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "motor>=3.7.1",
    "openai>=1.79.0",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.4",
    "pymongo>=4.13.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.2",
]
